--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -11,6 +11,7 @@
 <style>
 body{
 overflow: hidden;
+    margin: 0;
 }
 .attachment_box{
 background: white;
@@ -72,6 +73,10 @@ position: absolute;
  bottom: 20px;
  right: 20px;
 }
+    #iframeBox iframe{
+        border: none;
+        width: 100%;
+    }
 </style>
 <body>
 
