--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -13,7 +13,7 @@
 
 
 <div id="iframeBox"></div>
-<div class="courseware-open" onclick="showAddAttachment()">课件</div>
+<div class="courseware-open" onclick="showAddAttachment()"><span>课件</span></div>
 <div class="attachment_box" id="attachment_box">
 <div class="navigate">
     <div class="nav text-hidden" id="nav"></div>
