--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -51,6 +51,7 @@
 video{
 	width: 100%;
 	height: 100%;
+	object-fit:cover;
 }
 
 </style>
@@ -1224,8 +1225,6 @@ video{
 
 		   $("#video_container").prepend("<div><div id='agora_local' uid='"+userId+"' style='width: 230px; height: 160px; position: relative;margin: 12px 5px 0 5px;'><div style='position:absolute; bottom:0; left:30px; background:rgba(0,0,0,0.5); width:146px; text-align:center; z-index:1; overflow:hidden; text-overflow:ellipsis; height:24px; line-height:24px; white-space: nowrap; padding:0 4px;color:#fff; font-size:14px'>主讲</div><img id='audio_"+userId+"' style='color:red;' class='radio_no' text='' onclick='toggleMuteAudio("+userId+");'/></div></div>");
 
-		   client.publish(null, "agora_local");
-
 		   client.on('stream-published', function (evt) {
                localStream = evt.stream;
                streamMap[localStream.getId()] = localStream;
@@ -1242,6 +1241,14 @@ video{
                    localStream.disableAudio();
                };
                onAudioMutedStateChange(localStream.getId());
+		   });
+
+	       navigator.mediaDevices.getUserMedia({ audio: true, video: true })
+		   .then(function(stream) {
+			   client.publish(stream, "agora_local");
+		   })
+		   .catch(function(err) {
+
 		   });
   }
  
