--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -29,36 +29,40 @@
 <script src="./js/simple_websocket_connection.js" type="text/javascript"></script>
 
 <script>
+//   var userId = 28551;
+//   vid = 221822;
+   var HTML_LIST="";
    var vid = Service.getQueryString("vid");
-   var userId = 28551;
+   var userId = Service.getQueryString("userId");
+   var simpleMS = new SimpleConnection();
+   var randomNumber = RandomNumBoth(1000000,2000000);
    var defaultPageNo = 1;
    var parentId = -1;
    var parentArray = [{
        id: -1,
        name: '蚁盘'
    }];
-   var HTML_LIST="";
-   var simpleMS = new SimpleConnection();
-   var randomNumber = RandomNumBoth(1000000,2000000);
-   vid = 221822;
-   simpleMS.connect();
+//   simpleMS.connect();
    getClassOpenedKejian(vid);
    filterCloudFile();
 
 
-   simpleMS.msgWsListener = {
-        onError: function (errorMsg) {
+   //监听
+//   simpleMS.msgWsListener = {
+//        onError: function (errorMsg) {
+//
+//             console.log(errorMsg,'11111111111')
+//
+//          }, onWarn: function (warnMsg) {
+//
+//             console.log(warnMsg,'11111111111')
+//
+//          }, onMessage: function (info) {
+//             console.log(info,'11111111111')
+//          }
+//        };
 
-             console.log(errorMsg,'11111111111')
 
-          }, onWarn: function (warnMsg) {
-
-             console.log(warnMsg,'11111111111')
-
-          }, onMessage: function (info) {
-             console.log(info,'11111111111')
-          }
-        };
    /*
    通过vid获取课件信息
     */
@@ -88,8 +92,6 @@
                    if(iframe.contentWindow.pptCheckPage){
                      iframe.contentWindow.pptCheckPage(res.response.currentPage);
                    }
-//                   console.log(document.getElementById('ifr').contentWindow,'111');
-//                   document.getElementById('ifr').contentWindow.document.getElementById('contentFrame');
                }
            },
            onError:function(error){}
@@ -114,6 +116,7 @@
    function clickFile(fileType,parent,name,isPush,suffix,htmlPath,pdfPath){
        var path = suffix == 'ppt' || suffix == "pptx"?htmlPath:pdfPath;
        console.log('触发!!!');
+       name = unescape(name);
        if(fileType==0){
            if(path && path != 'null'){
                console.log(path);
@@ -124,7 +127,6 @@
                AddAttachmentChange('none');
            }else{
               console.log("path为空");
-//              alert("path为空");
            }
        }else{
            parentId = parent;
@@ -164,26 +166,18 @@
                    var attachment_bottom = document.getElementById('attachment_bottom');
                    var nav = document.getElementById('nav');
                    var data = res.response;
-//                   console.log(data,'filterCloudFile');
                    var imgSrc,img_height;
-//                   console.log(attachment_list.childNodes,'childNodes');
-//                   console.log(attachment_list.childNodes.length,'attachment_list.childNodes.length');
-
-
                    for(var k in data){
                            imgSrc = data[k].fileType == 0?"./img/cloud_icon_web1.png":"./img/cloud_icon_web.png";
                            img_height = data[k].fileType == 0?30:20;
                            HTML_LIST += "" +
-                            "<div onclick=clickFile("+data[k].fileType+","+data[k].id+",\""+data[k].name+"\",true,\""+data[k].suffix+"\",\""+data[k].htmlPath+"\",\""+data[k].pdfPath+"\") class='list-item line_public'><img class='item-image' src="+imgSrc+" style='height:"+img_height+"px' /><span class='item-text text-hidden'>"+data[k].name+"</span></div>";
-//                       }
+                            "<div onclick=clickFile("+data[k].fileType+","+data[k].id+",\""+escape(data[k].name)+"\",true,\""+data[k].suffix+"\",\""+data[k].htmlPath+"\",\""+data[k].pdfPath+"\") class='list-item line_public'><img class='item-image' src="+imgSrc+" style='height:"+img_height+"px' /><span class='item-text text-hidden'>"+data[k].name+"</span></div>";
                    }
-//                   console.log(parentArray,'parentArray');
                    var navHTML = "";
                    nav.innerHTML = "";
                    for(var k in parentArray){
                        navHTML += "<span onclick=clickNav("+parentArray[k].id+",\""+parentArray[k].name+"\") >"+parentArray[k].name+" > </span>";
                    }
-//                   console.log(navHTML,'navHTML')
                    attachment_bottom.innerText = res.response.length <= 0?"无更多文件":"点击加载更多";;
                    attachment_list.innerHTML = (HTML_LIST);
                    nav.innerHTML = navHTML;
@@ -201,16 +195,15 @@
        var indexof = '';
        for(var k in parentArray){
            if(parentArray[k].id == parentId){
-               indexof = k;
+               indexof = parseInt(k)+1;
            }
        }
-       parentArray = parentArray.slice(0,indexof+1);
+       parentArray = parentArray.slice(0,parseInt(indexof));
        clickFile(1,parentId,parentName);
    }
 
    //加载更多
    function onEndedPage(e){
-//       console.log(e.srcElement.innerText,'eeeeeee')
        if(e.srcElement.innerText == "无更多文件"){
            return;
        }
@@ -228,7 +221,7 @@
        AddAttachmentChange('block');
    }
 
-   //改变蚁盘盒子显示状态
+   //改变蚁盘元素显示状态
    function AddAttachmentChange(style){
        var mask = document.getElementById('mask');
        var attachment_box = document.getElementById('attachment_box');
