--- a/public/schoolClass/classMobileAssistant.html
+++ b/public/schoolClass/classMobileAssistant.html
@@ -10,30 +10,30 @@
     <script type="application/javascript" src="js/service.js"></script>
 </head>
 <body>
-
-
-<div id="iframeBox"></div>
-<div class="courseware-open" onclick="showAddAttachment()"><span>课件</span></div>
-<div class="attachment_box" id="attachment_box">
-<div class="navigate">
+  <div id="iframeBox"></div>
+  <div class="courseware-open" onclick="showAddAttachment()">
+    <span>课件</span>
+  </div>
+  <div class="attachment_box" id="attachment_box">
+  <div class="navigate">
     <div class="nav text-hidden" id="nav"></div>
     <div onclick="clickMask()" class="nav-back"></div>
-</div>
-<div class="attachment-cont">
+  </div>
+  <div class="attachment-cont">
     <div class="attachment_list" id="attachment_list"></div>
     <div onclick="onEndedPage(event)" id="attachment_bottom" class='attachment_bottom'>加载更多</div>
-</div>
-</div>
-<div class="mask" id="mask" onclick="clickMask()"></div>
+  </div>
+  </div>
+  <div class="mask" id="mask" onclick="clickMask()"></div>
 </body>
-<script src="./js/simple_websocket_connection.js" type="text/javascript"></script>
 
+<script src="./js/simple_websocket_connection.js" type="text/javascript"></script>
 <script>
 //   var userId = 28551;
 //   vid = 221822;
-   var HTML_LIST="";
    var vid = Service.getQueryString("vid");
    var userId = Service.getQueryString("userId");
+   var HTML_LIST="";
    var simpleMS = new SimpleConnection();
    var randomNumber = RandomNumBoth(1000000,2000000);
    var defaultPageNo = 1;
@@ -42,11 +42,9 @@
        id: -1,
        name: '蚁盘'
    }];
-//   simpleMS.connect();
    getClassOpenedKejian(vid);
    filterCloudFile();
-
-
+//   simpleMS.connect();
    //监听
 //   simpleMS.msgWsListener = {
 //        onError: function (errorMsg) {
@@ -61,7 +59,6 @@
 //             console.log(info,'11111111111')
 //          }
 //        };
-
 
    /*
    通过vid获取课件信息
@@ -78,16 +75,15 @@
                if(res.success){
                    var iframeBox = document.getElementById("iframeBox");
                    var iframe = document.createElement("iframe");
-
                    iframe.setAttribute("src","https://www.maaee.com/Excoord_For_Education/drawboard/main_app.html?vid="+res.response.vid+"&userId="+randomNumber+"&role=manager&ppt="+res.response.pptUrl+"");
                    iframe.setAttribute("id","ifr");
                    iframe.setAttribute("name","ifr");
-                   setTimeout(()=>{
-                           var progress_bar_container = window.frames["ifr"].document.getElementById("progress_bar_container");
-                           var progress_bar_wrap = window.frames["ifr"].document.getElementsByClassName("progress_bar_wrap")[0];
-                           progress_bar_wrap.style.borderRadius = "0 0 4px 4px";
-                           progress_bar_container.style.top = 0;
-                   },1000);
+//                   setTimeout(()=>{
+//                           var progress_bar_container = window.frames["ifr"].document.getElementById("progress_bar_container");
+//                           var progress_bar_wrap = window.frames["ifr"].document.getElementsByClassName("progress_bar_wrap")[0];
+//                           progress_bar_wrap.style.borderRadius = "0 0 4px 4px";
+//                           progress_bar_container.style.top = 0;
+//                   },1000);
                    iframeBox.appendChild(iframe);
                    if(iframe.contentWindow.pptCheckPage){
                      iframe.contentWindow.pptCheckPage(res.response.currentPage);
@@ -108,21 +104,18 @@
          return num;
    }
 
-
-
    /*
    点击蚁盘文件触发事件
    */
    function clickFile(fileType,parent,name,isPush,suffix,htmlPath,pdfPath){
        var path = suffix == 'ppt' || suffix == "pptx"?htmlPath:pdfPath;
-       console.log('触发!!!');
        name = unescape(name);
        if(fileType==0){
            if(path && path != 'null'){
-               console.log(path);
                var iframe = document.getElementById("ifr");
                iframe.setAttribute("src","https://www.maaee.com/Excoord_For_Education/drawboard/main_app.html?vid="+vid+"&userId="+randomNumber+"&role=manager&ppt="+path+"");
                var protocal = eval('(' + "{'command':'assistantPlayKejian','data':{'roomid':'"+vid+"','html':'"+path+"'}}" + ')');
+               //推送通知
                simpleMS.send(protocal);
                AddAttachmentChange('none');
            }else{
@@ -184,7 +177,7 @@
                }
            },
            onError:function(error){
-               console.log(error,'error')
+               console.log(error,'error');
            }
        });
    }
@@ -228,6 +221,5 @@
        mask.style.display = style;
        attachment_box.style.transform = style == 'block'?"translateY(0%)":"translateY(100%)";;
    }
-
 </script>
 </html>
