--- a/public/schoolClass/openUnionClass.html
+++ b/public/schoolClass/openUnionClass.html
@@ -8,26 +8,116 @@
     <script type="application/javascript" src="js/service.js"></script>
     <style>
 
-        .clazzInfo_selected{
-            background: palevioletred;
+        .modalCont{
+            padding-left: 22px;
+            padding-top: 20px;
         }
+        .title{
+            color: #333;
+            font-size: 15px;
+            padding-right: 22px;
+            width: 100px;
+            text-align: right;
+            display: inline-block;
+        }
+        .selectItem{
+            margin-bottom: 30px;
+        }
+        .selectItem input{
+            width: 175px;
+            height: 32px;
+            line-height: 32px;
+            padding: 10px;
+            box-sizing: border-box;
+            border: 1px #E5E5E5 solid;
+        }
+        .selectItem input.courseInput{
+            width: 380px;
+        }
+        .myFlex{
+            -webkit-display: flex;
+            -moz-display: flex;
+            -ms-display: flex;
+            -o-display: flex;
+            -khtml-display: flex;
+            display: flex;
+        }
+        #class_container{
+            font-size: 14px;
+            color: #666;
+            padding-left: 4px;
+            width: 350px;
+            height: 136px;
+            overflow-y: auto;
+        }
+        .classItem{
+            margin-bottom: 14px;
+            cursor: pointer;
+        }
+        .classItem i{
+            border: 1px #E5E5E5 solid;
+            width: 12px;
+            height: 12px;
+            display: inline-block;
+            margin-right: 9px;
+            vertical-align: text-bottom;
+        }
+        .clazzInfo_selected i{
+            background: #0084FF;
+            color: white;
+            position: relative;
+            border-color: #0084FF;
 
+        }
+        .clazzInfo_selected i::after{
+            content: '';
+            position: absolute;
+            width: 8px;
+            height: 4px;
+            border-left:1px #fff solid;
+            border-bottom: 1px #fff solid;
+            top:2px;
+            left: 2px;
+            -webkit-transform: rotate(310deg);
+            -moz-transform: rotate(310deg);
+            -ms-transform: rotate(310deg);
+            -o-transform: rotate(310deg);
+            transform: rotate(310deg);
+        }
+        .button{
+            border: 0;
+            background-color: #0084FF;
+            color: #fff;
+            font-size: 16px;
+            padding: 9px 0;
+            -webkit-border-radius: 2px;
+            -moz-border-radius: 2px;
+            border-radius: 2px;
+            margin: 30px auto 0;
+            text-align: center;
+            width: 150px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
 
-    <div>
-        开课主题:<input id="title"/> <br>
-        邀请码:<input id="password"/> <br>
-        请选择联合开课的班级:
-        <div id="class_container">
-
-
+    <div class="modalCont">
+        <div class="selectItem">
+            <span class="title">课程名称</span> <input class="courseInput" id="title"/>
         </div>
+        <div class="selectItem">
+            <span class="title">邀请码</span> <input id="password"/>
+        </div>
+        <div class="myFlex">
+            <span class="title">选择班级</span>
+            <div id="class_container">
 
-        <button onclick="openUnionClassSubmit();">确认创建</button>
 
+            </div>
+        </div>
     </div>
+    <div class="button" onclick="openUnionClassSubmit();">确认创建</div>
 
 </body>
 
@@ -53,7 +143,7 @@
                        var arrray = clazz.split("#");
                        var name = arrray[1];
                        var clazzId = arrray[0];
-                       $("#class_container").append("<div clazzId='"+clazzId+"' onclick='changeClazzSelected(this,"+clazzId+");'>"+name+"</div>");
+                       $("#class_container").append("<div class='classItem' clazzId='"+clazzId+"' onclick='changeClazzSelected(this,"+clazzId+");'><i></i>"+name+"</div>");
                    });
                }else{
                    $("#class_container").append("<span>请联系管理员为您绑定班级</span>");
