--- a/public/schoolClass/unionClassList.html
+++ b/public/schoolClass/unionClassList.html
@@ -3,13 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <title>联合开课列表</title>
+    <link type="text/css" src="css/teacherUnionClass.css">
     <script type="application/javascript" src="js/jquery-1.11.2.min.js"></script>
     <script type="application/javascript" src="js/layer/layer.js"></script>
     <script type="application/javascript" src="js/service.js"></script>
+    <style type="text/css">
+        body{
+
+            background-color: #F6F6F6;
+        }
+        .layui-layer-title{
+            font-size: 16px !important;
+        }
+        .courseBtn{
+            padding: 0 9px 0 33px;
+            height: 42px;
+            line-height: 42px;
+            color:#fff;
+            background: #0084FF url("img/icon_add_course.png") no-repeat 10px center;
+            background-size: 16px;
+            -webkit-border-radius: 4px;
+            -moz-border-radius: 4px;
+            border-radius: 4px;
+            display: inline-block;
+            margin: 6px 0 14px 45px;
+
+        }
+        #item_container{
+            background-color: white;
+            height: calc(100% - 70px);
+            overflow-y: scroll;
+            padding-left: 45px;
+
+        }
+        .item{
+            /*-webkit-display:  flex;*/
+            /*-moz-display: flex;*/
+            /*-ms-display:  flex;*/
+            /*-o-display:  flex;*/
+            /*-khtml-display: flex;*/
+            /*display:  flex;*/
+            color: #666;
+            font-size: 14px;
+            line-height: 20px;
+            padding: 20px 18px;
+            border-bottom: 1px #E5E5E5 solid;
+        }
+        .item:last-child{
+            border: 0;
+        }
+        #title{
+            font-size: 15px;
+            color: #333;
+            margin-bottom: 6px;
+        }
+        #main_teacher_name,#union_teacher_name{
+            margin-bottom: 6px;
+        }
+        #loading{
+            font-size: 14px;
+            text-align: center;
+            color: #888;
+            padding: 10px 0;
+        }
+        .rightCont{
+            position: relative;
+        }
+        .joinBtn{
+            position: absolute;
+            right: 0;
+            top: 50%;
+            border: 1px #0084FF solid;
+            color: #0084FF;
+            padding: 5px 10px;
+            -webkit-transform: translateY(-50%);
+            -moz-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+            -o-transform: translateY(-50%);
+            transform: translateY(-50%);
+            cursor: pointer;
+        }
+
+    </style>
 </head>
+
 <body>
 
-<span onclick="openUnionClass();">开启联合开课</span>
+<span class="courseBtn" onclick="openUnionClass();">开启联合开课</span>
 
 <div id="item_container">
 
@@ -19,10 +99,14 @@
 <div id="loading" style="display: none;"> 正在加载...</div>
 
 <div id="item_template" style="display: none;">
-    <div>
-        <div id="title">北京四中和下关四中关于学生品德问题的联合调研</div>
-        <div id="main_teacher_name">张三</div>
-        <div id="union_teacher_name">李四-王五</div>
+    <div class="item">
+        <div class="rightCont">
+            <div id="title">北京四中和下关四中关于学生品德问题的联合调研</div>
+            <div id="main_teacher_name">张三</div>
+            <div id="union_teacher_name">李四-王五</div>
+            <div id="start_time">开课时间：2018-10-10 09:25</div>
+            <div id="join_class" class="joinBtn">加入课堂</div>
+        </div>
     </div>
 </div>
 </body>
@@ -54,13 +138,15 @@
                    var openTeacher = info.openTeacher;
                    var unionTeachers = info.unionTeachers;
                    var pass = info.password;
+                   var startTime = datetimeFormat(info.startTime);
 
                    var template = $("#item_template");
-                   $(template.children("div").get(0)).attr("onclick","joinUnionClass("+vid+");");
                    $(template.children("div").get(0)).attr("id","vclass_"+vid);
                    $(template.children("div").get(0)).attr("pass",pass);
                    template.find("#title").text(title);
-                   template.find("#main_teacher_name").text(openTeacher.userName);
+                   template.find("#main_teacher_name").text("主讲老师 : "+openTeacher.userName);
+                   template.find("#join_class").attr("onclick","joinUnionClass("+vid+");");
+                   template.find("#start_time").text("开课时间 : "+startTime);
 
                    var unionTeacherNames = "";
                    if(unionTeachers && unionTeachers.length > 0){
@@ -74,7 +160,7 @@
                        });
                    }
 
-                   template.find("#union_teacher_name").text(unionTeacherNames);
+                   template.find("#union_teacher_name").text("联合老师 : "+unionTeacherNames);
 
                    $("#item_container").append(template.html());
                    template.attr("info_vid","0");
@@ -87,13 +173,61 @@
        }})
     }
 
+    function datetimeFormat(longTypeDate){
+        var dateTypeDate = "";
+        var date = new Date();
+        date.setTime(longTypeDate);
+        dateTypeDate += date.getFullYear(); //年
+        dateTypeDate += "-" + getMonth(date); //月
+        dateTypeDate += "-" + getDay(date); //日
+        dateTypeDate += " " + getHours(date); //时
+        dateTypeDate += ":" + getMinutes(date);  //分
+        return dateTypeDate;
+    }
+
+    function getMonth(date){
+        var month = "";
+        month = date.getMonth() + 1; //getMonth()得到的月份是0-11
+        if(month<10){
+            month = "0" + month;
+        }
+        return month;
+    }
+
+    function getDay(date){
+        var day = "";
+        day = date.getDate();
+        if(day<10){
+            day = "0" + day;
+        }
+        return day;
+    }
+
+    function getHours(date){
+        var hours = "";
+        hours = date.getHours();
+        if(hours<10){
+            hours = "0" + hours;
+        }
+        return hours;
+    }
+
+    function getMinutes(date){
+        var minute = "";
+        minute = date.getMinutes();
+        if(minute<10){
+            minute = "0" + minute;
+        }
+        return minute;
+    }
+
     function openUnionClass(){
         layer.open({
             type: 2,
             title: '开启一个联合开课',
             shadeClose: true,
             shade: 0.8,
-            area: ['380px', '90%'],
+            area: ['600px', '438px'],
             content: 'openUnionClass.html?teacherId='+teacherId+"&userName="+teacherName
         });
     }
@@ -104,7 +238,7 @@
             title: '进入课堂验证',
             shadeClose: true,
             shade: 0.8,
-            area: ['380px', '90%'],
+            area: ['520px', '379px'],
             content: 'joinDialog.html?teacherId='+teacherId+"&vid="+vid
         });
     }
