--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -5,6 +5,7 @@
 <base href="<%=base%>">
 
 <title>联合开课-辅讲</title>
+<meta charset="UTF-8">
 <meta http-equiv="cache-control" content="no-cache">
 <meta http-equiv="expires" content="0">
 <meta http-equiv="keywords" content="keyword1,keyword2,keyword3">
