--- a/public/schoolClass/teacherUninonSlaver.html
+++ b/public/schoolClass/teacherUninonSlaver.html
@@ -16,6 +16,7 @@
 <script type="text/javascript" src="js/clazz_websocket_connection.js?v=20"></script>
 <script type="text/javascript" src="js/uiutils.js"></script>
 <link rel="icon" href="img/logo_title.png" type="image/x-icon">
+<link rel="shortcut icon" href="img/logo_title.png" type="image/x-icon"/>
 <link type="text/css" rel="stylesheet" href="css/live.css?v=83" />
 <link type="text/css" rel="stylesheet" href="css/Cloud_video.css?v=25" />
 <link type="text/css" rel="stylesheet" href="js/jquery-photo-gallery/photoGallery.css" />
@@ -35,8 +36,8 @@
 <script type="text/javascript" src="js/hashset.js"></script>
 <script type="text/javascript" src="i18n/jquery.i18n.properties.js"></script>
 
-<script type="text/javascript" src="../openvidu-browser-2.4.0.js"></script>
-<script type="text/javascript" src="../ExRTCSDK-2.4.0.js"></script>
+<script type="text/javascript" src="openvidu/openvidu-browser-2.4.0.js"></script>
+<script type="text/javascript" src="openvidu/ExRTCSDK-2.4.0.js"></script>
 <script type="application/javascript" src="./js/qrcode.js"></script>
 
 <style type="text/css">
