--- a/public/schoolClass/teacherUnionMaster.html
+++ b/public/schoolClass/teacherUnionMaster.html
@@ -27,8 +27,6 @@
 
 <script type="text/javascript" src="js/layer/layer.js"></script>
 
-<script type="text/javascript" src="js/agora/AgoraRTCSDK-2.3.1.js"></script>
-
 <link rel="stylesheet" href="js/agora/vendor/bootstrap.min.css">
 
 <!-- 引入Service类 -->
@@ -39,8 +37,8 @@
 
 <script type="text/javascript" src="i18n/jquery.i18n.properties.js"></script>
 
-<script type="application/javascript" src="openvidu/openvidu-browser-2.4.0.js"></script>
-<script type="application/javascript" src="openvidu/ExRTCSDK-2.4.0.js"></script>
+<script type="application/javascript" src="../openvidu-browser-2.4.0.js"></script>
+<script type="application/javascript" src="../ExRTCSDK-2.4.0.js"></script>
 <script type="application/javascript" src="./js/qrcode.js"></script>
 
 <style type="text/css">
