--- a/public/show1.html
+++ b/public/show1.html
@@ -14,8 +14,8 @@
 	<!-- Bootstrap -->
 
 	<link rel="styleSheet" href="style.css" type="text/css" media="screen">
-	<script src="schoolClass/openvidu/openvidu-browser-2.4.0.js"></script>
-	<script src="schoolClass/openvidu/ExRTCSDK-2.4.0.js"></script>
+	<script src="openvidu-browser-2.4.0.js"></script>
+	<script src="ExRTCSDK-2.4.0.js"></script>
 	<script src="show1.js"></script>
 
 	<script>
